multi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi
spec:
  volumes:
  - name: shared-data
    emptyDir: {}
  containers:
  - name: web-container
    image: nginx
    volumeMounts:
    - name: shared-data
      mountPath: /usr/share/nginx/html
  - name: ftp-container
    image: fauria/vsftpd
    volumeMounts:
    - name: shared-data
      mountPath: /pod-data
