myapp-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-prod
  labels:
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: gcr.io/playground-s-11-d98568/myapp:v1
        ports:
        - containerPort: 8888
